Add Confluence spaces remap feature; consolidate settings and update environment variable aliases

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 # Copy to .env before running
-JIRA_SITE=https://your-domain.atlassian.net
-JIRA_EMAIL=you@example.com
-JIRA_API_TOKEN=your-api-token
+JTOOL_BASE_URL=https://your-domain.atlassian.net
+JTOOL_EMAIL=you@example.com
+JTOOL_API_TOKEN=your-api-token
