Add Copilot instructions, update README for dev environment, and adjust pre-commit config

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,4 +26,4 @@ repos:
         language: unsupported
         types: [python]
         pass_filenames: true
-        stages: [pre-commit]
+        stages: [pre-push]
