--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,8 @@ dependencies = [
 jtool = "jtool.cli:app"
 
 [build-system]
-requires = ["uv_build>=0.9.28,<0.11.0"]
+requires = ["uv_build>=0.9,<0.11"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = ["ruff>=0.15.0", "ty>=0.0.15"]
+dev = ["pre-commit>=4.5", "ruff>=0.15", "ty>=0.0.15"]
